Fix sidebar coming up short on mobile
See https://gitlab.com/gitlab-org/gitlab-ce/issues/32735

--- a/app/assets/stylesheets/framework/sidebar.scss
+++ b/app/assets/stylesheets/framework/sidebar.scss
@@ -83,4 +83,8 @@
     position: fixed;
     top: $header-height;
   }
+
+  &:not(.affix-top) {
+    min-height: 100%;
+  }
 }
